Swagger update and master sync (#838)
* Fixes HTTP error codes and errors being swallowed (#826)

* [Tezos] Implement fetching validators based on period type (#830)

* Increase tezos block for getting validators list

* Add fetching validators based on period type

* Rename method to getCurrentValidators

* Improves market error logging (#833)

* Improves market error logging

* Adds further logging

* Fix Compound provider prices (#828)

* respect stored quote currency and fixes fetching compound price

* fix tests

* update swagger
