# api/handlers.go
@@ -21,7 +21,7 @@ import (
 // @Description Get transactions from the address
 // @Accept json
 // @Produce json
-// @Tags platform
+// @Tags Platform-Transactions
 // @Param coin path string true "the coin name" default(tezos)
 // @Param address path string true "the query address" default(tz1WCd2jm4uSt4vntk4vSuUWoZQGhLcDuR9q)
 // @Failure 500 {object} ginutils.ApiError
@@ -35,7 +35,7 @@ func makeTxRouteV1(router gin.IRouter, api blockatlas.Platform) {
 // @Description Get transactions from the address
 // @Accept json
 // @Produce json
-// @Tags platform
+// @Tags Platform-Transactions
 // @Param coin path string true "the coin name" default(tezos)
 // @Param address path string true "the query address" default(tz1WCd2jm4uSt4vntk4vSuUWoZQGhLcDuR9q)
 // @Success 200 {object} blockatlas.TxPage
@@ -114,7 +114,7 @@ func makeTxRoute(router gin.IRouter, api blockatlas.Platform, path string) {
 // @Description Get validators from the address
 // @Accept json
 // @Produce json
-// @Tags platform
+// @Tags Platform-Staking
 // @Param coin path string true "the coin name" default(cosmos)
 // @Success 200 {object} blockatlas.DocsResponse
 // @Failure 500 {object} ginutils.ApiError
@@ -143,7 +143,7 @@ func makeStakingValidatorsRoute(router gin.IRouter, api blockatlas.Platform) {
 // @Description Get stake delegations from the address
 // @Accept json
 // @Produce json
-// @Tags platform
+// @Tags Platform-Staking
 // @Param coin path string true "the coin name" default(tron)
 // @Param address path string true "the query address" default(TPJYCz8ppZNyvw7pTwmjajcx4Kk1MmEUhD)
 // @Success 200 {object} blockatlas.DelegationResponse
@@ -173,7 +173,7 @@ func makeStakingDelegationsRoute(router gin.IRouter, api blockatlas.Platform) {
 // @Description Get all collections from the address
 // @Accept json
 // @Produce json
-// @Tags platform
+// @Tags Platform-Collections
 // @Param coin path string true "the coin name" default(ethereum)
 // @Param address path string true "the query address" default(0x5574Cd97432cEd0D7Caf58ac3c4fEDB2061C98fB)
 // @Success 200 {object} blockatlas.CollectionPage
@@ -204,7 +204,7 @@ func oldMakeCollectionsRoute(router gin.IRouter, api blockatlas.Platform) {
 // @Description Get all collections from the address
 // @Accept json
 // @Produce json
-// @Tags platform
+// @Tags Platform-Collections
 // @Param coin path string true "the coin name" default(ethereum)
 // @Param address path string true "the query address" default(0x5574Cd97432cEd0D7Caf58ac3c4fEDB2061C98fB)
 // @Success 200 {object} blockatlas.CollectionPage
@@ -234,7 +234,7 @@ func makeCollectionsRoute(router gin.IRouter, api blockatlas.Platform) {
 // @Description Get a collection from the address
 // @Accept json
 // @Produce json
-// @Tags platform
+// @Tags Platform-Collections
 // @Param coin path string true "the coin name" default(ethereum)
 // @Param owner path string true "the query address" default(0x0875BCab22dE3d02402bc38aEe4104e1239374a7)
 // @Param collection_id path string true "the query collection" default(0x06012c8cf97bead5deae237070f9587f8e7a266d)
@@ -266,7 +266,7 @@ func oldMakeCollectionRoute(router gin.IRouter, api blockatlas.Platform) {
 // @Description Get a collection from the address
 // @Accept json
 // @Produce json
-// @Tags platform
+// @Tags Platform-Collections
 // @Param coin path string true "the coin name" default(ethereum)
 // @Param owner path string true "the query address" default(0x0875BCab22dE3d02402bc38aEe4104e1239374a7)
 // @Param collection_id path string true "the query collection" default(0x06012c8cf97bead5deae237070f9587f8e7a266d)
@@ -297,7 +297,7 @@ func makeCollectionRoute(router gin.IRouter, api blockatlas.Platform) {
 // @Description Get tokens from the address
 // @Accept json
 // @Produce json
-// @Tags platform
+// @Tags Platform-Transactions
 // @Param coin path string true "the coin name" default(ethereum)
 // @Param address path string true "the query address" default(0x5574Cd97432cEd0D7Caf58ac3c4fEDB2061C98fB)
 // @Success 200 {object} blockatlas.CollectionPage
